Fix overflow x

--- a/src/styles/layout.scss
+++ b/src/styles/layout.scss
@@ -5,6 +5,7 @@
 .main-content {
   flex-grow: 1;
   overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
 
   #canvas-mount {
